crates/analyzer/tests/snapshots/errors__missing_return_after_if.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: function body is missing a return or revert statement
  ┌─ compile_errors/missing_return_after_if.fe:2:13
  │
2 │     pub def bar(val: u256) -> u256:
  │             ^^^               ---- expected function to return `u256`
  │             │                  
  │             all paths of this function must `return` or `revert`


